updated store layout and fixed a bug in the date calc on the shift sign up page

--- a/site-files/static/css/app.css
+++ b/site-files/static/css/app.css
@@ -156,6 +156,10 @@ body {
     display: none;
 }
 
+#dlgBikeDetails > .modal-dialog {
+    width: 640px;
+}
+
 #storeTemplates {
     display: none;
 }
@@ -190,6 +194,10 @@ body {
 
 .bikeImage {
     text-align: center;
+}
+
+.bikeImage > img {
+    width: 600px;
 }
 
 .bikeDescription {
